Added deep link navigation with activated routing and improved responsive behaviour

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             <select name="country" id="country" formControlName="country" class="form-control">
-                <option selected>Select location</option>
+                <option selected aria-placeholder="Select Location">Select location</option>
                 <option *ngFor="let i of locations">{{ i }}</option>
             </select>
         </div>
