--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs bg-dark">
     <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" routerLink="/">Home</a>
+      <a class="nav-link" routerLinkActive="active" routerLink="/courses">Courses</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="/home">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" routerLink="/carts">Address</a>
     </li>
-  </ul>
-  <router-outlet></router-outlet>
+</ul>
+<router-outlet></router-outlet>
