--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,21 +29,21 @@
             </div>
         </div>
         <div class="form-group">
-            <input type="text"
-            formControlName="course"
-            id="course"
-            placeholder="Course Name"
-            class="form-control">
+            <select name="courses" id="courses" formControlName="courses" class="form-control" required>
+                <option selected aria-placeholder="Select Course">Select Course</option>
+                <option *ngFor="let course of courses">{{ course.name }}</option>
+            </select>
         </div>
         <div class="form-group">
             <button class="btn btn-primary" (click)="submit()" [disabled]="!form.valid">ADD</button>
             <div *ngIf="isSubmitted"><p style="color: green;"> {{ msg }}</p>
             </div>
-            <div *ngIf="isSubmitted" class="alert alert-secondary">
+            <div *ngIf="isSubmitted" class="alert alert-secondary" style="font-weight: 500;">
                 <h5>The following item has been added:</h5>
+                <br>
                 Name: {{ val.firstname + ' ' + val.lastname }}
                 <br>
-                Course: {{ val.course }}
+                Course: {{ val.courses }}
             </div>
         </div>
         
