--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
       <a class="nav-link" routerLinkActive="active" routerLink="/courses">Courses</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" routerLink="/home">Home</a>
+      <a class="nav-link" routerLinkActive="active" routerLink="/home">Personal Details</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" routerLink="/carts">Address</a>
